--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
-    "token": "TOKEN",
-    "prefix": "+"
+    "token": "Bot NzMzMDI3MTI4NTU1MDc3NjUz.Xw9Ktg.zfuoEhvc--eCQHilVnhbZyL7wUw",
+    "prefix": "+",
+    "author": "569938327495507969"
 }
