--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "Bot NzMzMDI3MTI4NTU1MDc3NjUz.Xw9Ktg.zfuoEhvc--eCQHilVnhbZyL7wUw",
+    "token": "Bot TOKEN",
     "prefix": "+",
     "author": "569938327495507969"
 }
